[package]
name = "abnf-toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
substring = "1.4.5"
strum = { version = "0.25", features = ["derive"] }
strum_macros = "0.25"
